--- a/ios/crypto_calculator/LaunchScreen.storyboard
+++ b/ios/crypto_calculator/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -14,20 +14,20 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nord-logo" translatesAutoresizingMaskIntoConstraints="NO" id="9pT-qm-5Pm">
-                                <rect key="frame" x="45" y="343" width="324" height="212"/>
+                                <rect key="frame" x="40" y="1.6666666666666856" width="334" height="736"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="9pT-qm-5Pm" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="45" id="GNA-v0-nzv"/>
-                            <constraint firstItem="9pT-qm-5Pm" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="299" id="Sds-02-OUc"/>
-                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="9pT-qm-5Pm" secondAttribute="bottom" constant="307" id="pXp-zx-i5u"/>
-                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="trailing" secondItem="9pT-qm-5Pm" secondAttribute="trailing" constant="45" id="v8s-YH-8rJ"/>
+                            <constraint firstItem="9pT-qm-5Pm" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="40" id="9bn-45-PVU"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="9pT-qm-5Pm" secondAttribute="bottom" constant="-1.7001193939156565" id="Bbl-mh-OXD"/>
+                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="trailing" secondItem="9pT-qm-5Pm" secondAttribute="trailing" constant="40" id="VmF-fI-0Rd"/>
+                            <constraint firstItem="9pT-qm-5Pm" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="1.7001193939154291" id="ti1-2i-baT"/>
                         </constraints>
                     </view>
                 </viewController>
